# fabric-smart-farming-analytics

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: README.md  pull_request_template.md
architecture/: README.md
architecture/drawio/: batch-architecture.drawio  data-retention-strategy.drawio  medallion-architecture.drawio  microsoft-fabric-solution-architecture.drawio  monitoring-strategy.drawio  security-architecture.drawio  streaming-architecture.drawio
config/fabric/: eventstream-routing-template.json  kql-table-schemas.kql
docs/: README.md  kpi-mapping.md  non-functional-requirements.md  requirements-traceability.md
docs/architecture/: architecture-decisions.md  batch-architecture.md  cost-considerations.md  data-retention.md  medallion-architecture.md  microsoft-fabric-architecture.md  monitoring-strategy.md  security-model.md  streaming-architecture.md
docs/business/: business-kpis.md  business-scenario.md  dashboard-requirements.md  functional-requirements.md  kpi-mapping.md  non-functional-requirements.md  requirements-traceability.md  user-personas.md
docs/events/: event-catalog.md  event-schema.md  facility-profiles.md
docs/fabric/: setup-guide.md
docs/samples/: crop_lifecycle.json  environmental_telemetry.json  equipment_telemetry.json
fabric/FarmingTelemetryEventstream.Eventstream/: .platform  eventstream.json
fabric/SmartFarmingEventhouse.Eventhouse/: .platform
src/smart_farming/: main.py
tests/integration/: verify_pipeline.py
(+93 files in other folders)
