[project]
name = "fabric-smart-farming-analytics"
version = "0.1.0"
description = "Production-style Microsoft Fabric Smart Farming Analytics Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Joseph Baguio" }
]

dependencies = [
    "faker",
    "pandas",
    "requests",
    "python-dotenv"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"